prevent buttons fron wrapping text

--- a/www/scss/ldart/fixes.scss
+++ b/www/scss/ldart/fixes.scss
@@ -13,3 +13,10 @@
 .slds-tabs--path__title {
   padding-left: 0.15rem;
 }
+
+// Button Group in Table
+//.slds-button-group {
+  .slds-button {
+    white-space: nowrap;
+  }
+//}
